--- a/readme.html
+++ b/readme.html
@@ -14,6 +14,6 @@ Upon installing AWS Systems Manager and configuring your asset, you will want to
   <li>Ability to read and write to S3 buckets</li>
 </ul>
 
-By default, AWS Systems Manager doesn't have permission to perform actions on your instances. You must make sure to attach the AmazonEC2RoleforSSM IAM policy to the instance that you want to manage with SSM.
+By default, AWS Systems Manager does not have permission to perform actions on your instances. You must make sure to attach the AmazonEC2RoleforSSM IAM policy to the instance that you want to manage with SSM.
 
 For more information on setting up your account and instances with SSM privileges, visit the <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/tutorial_run_command.html">AWS tutorial</a>.
