cleaned up some values in json, fixed spelling in readme

--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
 
 <b>Authorization</b><br></br>
 
-Upon installing AWS Systems Manager and configuring your asset, you will want to make sure your AWS account (preferably with Administator privileges) has the following permissions:<br></br>
+Upon installing AWS Systems Manager and configuring your asset, you will want to make sure your AWS account (preferably with Administrator privileges) has the following permissions:<br></br>
 
 <ul>
   <li>The AmazonSSMFullAccess policy is attached directly to the account</li>
