Specify the version for configuration parameter and fix the column_order values

--- a/readme.html
+++ b/readme.html
@@ -16,7 +16,7 @@ Upon installing AWS Systems Manager and configuring your asset, you will want to
 
 <h2> Playbook Backward Compatibility</h2>
 <ul>
-  <li> A new asset configuration parameter has been added. Hence, it is requested to the end-user to please update their existing assets and  playbooks accordingly.</li>
+  <li> A new asset configuration parameter has been added in v2.0 of the app. Hence, it is requested to the end-user to update their existing assets and playbooks accordingly.</li>
     <ul>
       <li> Default S3 Bucket Name: This parameter defines the default AWS S3 bucket to be used for writing the output of the <b>get file</b> and the <b>execute program</b> actions. For performance optimality, the <b>test connectivity</b> action does not validate this parameter.</li>
     <ul>
