--- a/readme.html
+++ b/readme.html
@@ -5,14 +5,23 @@
   without a valid written license from Splunk Inc. is PROHIBITED.
 -->
 
-<b>Authorization</b><br></br>
-
+<h2>Authorization</h2>
 Upon installing AWS Systems Manager and configuring your asset, you will want to make sure your AWS account (preferably with Administrator privileges) has the following permissions:<br></br>
 
 <ul>
   <li>The AmazonSSMFullAccess policy is attached directly to the account</li>
   <li>Ability to read and write to S3 buckets</li>
 </ul>
+
+If it is preferred to use a role and Phantom is running as an EC2 instance, the <b>use_role</b> checkbox can be checked instead.  This will allow the role that is attached to the instance to be used.  Please see the <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/iam-roles-for-amazon-ec2.html">AWS EC2 and IAM documentation</a> for more information.
+<br></br>
+By default, AWS Systems Manager does not have permission to perform actions on your instances. You must make sure to attach the AmazonEC2RoleforSSM IAM policy to the instance that you want to manage with SSM.
+
+For more information on setting up your account and instances with SSM privileges, visit the <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/tutorial_run_command.html">AWS tutorial</a>.
+
+<h2>Assumed Role Credentials</h2>
+The optional <b>credentials</b> action parameter consists of temporary <b>assumed role</b> credentials that will be used to perform the action instead of those that are configured in the <b>asset</b>. The parameter is not designed to be configured manually but should instead be used in conjunction with the Phantom AWS Security Token Service app. The output of the <b>assume_role</b> action of the STS app with data path <b>assume_role_&lt;number&gt;:action_result.data.*.Credentials</b> consists of a dictionary containing the <b>AccessKeyId</b>, <b>SecretAccessKey</b>, <b>SessionToken</b> and <b>Expiration</b> key/value pairs. This dictionary can be passed directly into the credentials parameter in any of the following actions within a playbook. For more information, please see the <a href=https://docs.aws.amazon.com/iam/index.html>AWS Identity and Access Management documentation</a>.
+
 
 <h2> Playbook Backward Compatibility</h2>
 <ul>
@@ -22,6 +31,3 @@ Upon installing AWS Systems Manager and configuring your asset, you will want to
     <ul>
 </ul>
 
-By default, AWS Systems Manager does not have permission to perform actions on your instances. You must make sure to attach the AmazonEC2RoleforSSM IAM policy to the instance that you want to manage with SSM.
-
-For more information on setting up your account and instances with SSM privileges, visit the <a href="https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/tutorial_run_command.html">AWS tutorial</a>.
