--- a/release_notes/release_notes.html
+++ b/release_notes/release_notes.html
@@ -1,5 +1,9 @@
-<b>AWS Systems Manager Release Notes - Published by Splunk October 15, 2021</b>
+<b>AWS Systems Manager Release Notes - Published by Splunk April 08, 2022</b>
 <br><br>
+<b>Version 2.3.0 - Released April 08, 2022</b>
+<ul>
+<li>Marked the app as FIPS Compliant [PAPP-21857]</li>
+</ul>
 <b>Version 2.2.7 - Released October 15, 2021</b>
 <ul>
 <li>Removed unnecessary build artifacts</li>
